# bdd-agent

./: .gitignore  .projectrules  README.md  pyproject.toml
.playwright-mcp/: cenarios-bdd.txt  cenarios.feature
.streamlit/: config.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: 01_1_estrutura_base_2024-12-19.md  index.md
src/: main.py
src/bdd_generator/: __init__.py  generator.py  openai_client.py
src/multi_agent/: __init__.py  agents.py  models.py  orchestrator.py
tests/: conftest.py
